Do an extra sanity check